Created attachment 185945 [details] cam iosched: Limit the quanta default to hz if it's below 200 The attached patch limits the quanta default to hz if it's below 200 Previously the quanta default was always 200 while hz defaults to 100 when running in a vm. The cam_iosched_ticker() can't be scheduled more than once per tick and some of the limiters depend on quanta matching the number of calls per second to enforce the proper limits. Obtained from: ElectroBSD
This looks good to me.
A commit references this bug: Author: imp Date: Tue Sep 12 23:46:33 UTC 2017 New revision: 323511 URL: https://svnweb.freebsd.org/changeset/base/323511 Log: cam iosched: Limit the quanta default to hz if it's below 200 The cam_iosched_ticker() can't be scheduled more than once per tick. Some limiters depend on quanta matching the number of calls per second to enforce the proper limits. Limit the quanta to no faster than 1 per clock tick. This fixes some features when running in VMs where the default HZ is 100. PR: 221953 Obtained from: ElectroBSD Differential Revision: https://reviews.freebsd.org/D12337 Submitted by: Fabian Keil Changes: head/sys/cam/cam_iosched.c